--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Mih você conseguiu fazer com que esses últimos dias fossem os melhores que eu tive até hoje, em tão pouco tempo eu já sinto que vc faz parte da minha rotina. Eu me segurei muito pra não fazer as coisas cedo demais... kkkkkk (Eu tenteiiii) mas já tem um tempo que estamos conversando e a cada dia que passa eu sinto mais vontade de poder olhar pra você e te ver novamente, eu prometi e quero fazer cumprir cada letra que está escrita naquela carta. Eu espero que você confie em mim e me dê uma chance para te provar, eu só preciso de uma chance e nada mais. Sei que você pode não estar preparada totalmente ainda, mas eu estou aqui esperando você e posso esperar o tempo que for... Só vamos rir um do outro, aproveitar o momento e fazer o nosso dia um pouco mais legal. (E VAMO COMEEEEEERRRR) </p>
 
             <b>Observações:</b><br>
-            <p>Caso aceite: <br> <ul><li>Dia: 11/05</li><li>Levar protetor solar</li><li>Usar uma roupa confortável<br><strong>(eu sei que você é linda mas tenta ir no meu nível pra eu te acompanhar)</strong></li><li>Leve sua barriguinha não tão cheia</li><li>Não se preocupe com nada</li></ul></p>
+            <p>Caso aceite: <br> <ul><li>Dia: 11/05</li><li>Usar uma roupa confortável<br><strong>(eu sei que você é linda mas tenta ir no meu nível pra eu te acompanhar)</strong></li><li>Leve sua barriguinha não tão cheia</li><li>Não se preocupe com nada</li></ul></p>
         </div>
 
         <div class="formulario">
